# python-lang-project-harness

./: .gitignore  README.md  development.md  devenv.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/01_core/: 101_harness_boundary.md
docs/03_features/: 201_rule_catalog.md  202_agent_pythonic_policy_research.md  202_runner_modes.md  203_cli.md  204_pytest.md  205_verification.md
provider/: asp-provider-manifest.json
schemas/: python-semantic-capabilities.v1.schema.json  semantic-native-syntax-fact-index.v1.schema.json  semantic-query-packet.v1.schema.json  semantic-read-packet.v1.schema.json  semantic-search-packet.v1.schema.json  semantic-tree-sitter-provenance.v1.schema.json  semantic-tree-sitter-query.v1.schema.json
src/python_lang_parser/: __init__.py  _ast_annotations.py  _ast_collector.py  _ast_names.py  _binding_mutations.py  _call_effects.py  _class_shape.py  _control_flow.py  _diagnostic_model.py  _diagnostics.py  _export_model.py  _exports.py  _module_identity.py  _module_policy.py  _module_shape.py  _name_policy.py  _native_collection_loops.py  _native_idiom_loops.py  _native_mapping_loops.py  _native_numeric_loops.py  _native_symbols.py  _project_model.py  _pyproject_metadata.py  _reasoning_tree.py  _reasoning_tree_imports.py  _reasoning_tree_model.py  _symbol_model.py  _symbol_policy.py  _version.py  model.py  parser.py
src/python_lang_project_harness/: __init__.py  __main__.py  _agent_hook_install.py  _agent_hook_profile.py  _agent_hooks.py  _agent_namespace.py  _agent_namespace_index.py  _agent_policy.py  _agent_policy_catalog.py  _agent_reasoning_tree.py  _agent_snapshot.py  _agent_snapshot_tree.py  _cli.py  _cli_agent.py  _cli_args.py  _cli_ast_patch.py  _cli_exact_source_query.py  _cli_protocol.py  _cli_query.py  _cli_query_arg_consume.py  _cli_query_args.py  _cli_query_fast.py  _cli_query_flow_lite_args.py  _cli_query_hook_args.py  _cli_query_predicates.py  _cli_query_tree_sitter_args.py  _cli_search_runtime.py  _constants.py  _dev_command_log.py  _dev_command_log_command.py  _dev_command_log_context.py  _discovery.py  _evidence_graph.py  _evidence_graph_turbo.py  _flow_lite_query.py  _flow_lite_query_model.py  _flow_lite_query_packet.py  _flow_lite_query_projector.py  _harness_rules.py  _model.py  (+123 more)
src/python_lang_project_harness/agent_readability/: __init__.py  _boundaries.py  _quality_signals.py  _software_criteria.py  algorithm_shape.py  function_compactness.py  native_idioms.py  type_shapes.py
src/python_lang_project_harness/verification/: __init__.py  facts.py  indices.py  model.py  obligations.py  planner.py  profile_index.py  render.py  report.py
tests/fixtures/compact-query/: python-class.json  python-decide.json  python-flow.json
tests/unit/: test_package_metadata.py  test_public_api.py  test_self_hosting.py
tests/unit/harness/: harness-rules.generated.md  semantic_search_fixture.py  snapshot_support.py  test_agent_algorithm_policy.py  test_agent_policy.py  test_agent_policy_snapshots.py  test_agent_quality_signal_snapshots.py  test_cli.py  test_dev_command_log.py  (+64 more)
tree-sitter/tree-sitter-python/: grammar-profile.json
(+81 files in other folders)
